# ros-robot-arm

./: README.md
src/meshes/blue_cube/: model.sdf
src/meshes/blue_plastic/: model.config  model.sdf
src/meshes/camera/: model.sdf
src/meshes/camera_positioned/: model.config  model.sdf
src/meshes/green_cube/: model.sdf
src/meshes/platform/: model.sdf
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: complete.launch  sim_complete.launch
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/arduino/ros_robot_control/: ros_robot_control.ino
src/robot_controller/arduino/ros_servo_control/: ros_servo_control.ino
src/robot_controller/arduino/simple_publisher/: simple_publisher.ino
src/robot_controller/arduino/simple_subscriber/: simple_subscriber.ino
src/robot_controller/config/: joint_state_controller.yaml  trajectory_controllers.yaml
src/robot_controller/include/robot_controller/: robot_interface.h
src/robot_controller/launch/: controller.launch
src/robot_controller/scripts/: angles_converter.py
src/robot_controller/src/: angles_converter.cpp  robot_interface.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch  gazebo.launch
src/robot_description/urdf/: camera.urdf.xacro  robot.urdf.xacro
src/robot_description/worlds/: robot_world
src/robot_moveit/: .setup_assistant  package.xml
src/robot_remote/: CMakeLists.txt  package.xml
src/robot_test/: CMakeLists.txt  package.xml
src/vision/: package.xml
src/worlds/: world
(+29 files in other folders)
